# AppGPUImage

./: .gitattributes  .gitignore  .gitmodules  README.md  makefile
demo/ios/AppGPUImageIOSDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
demo/ios/AppGPUImageIOSDemo.xcodeproj/: project.pbxproj
demo/ios/AppGPUImageIOSDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/ios/AppGPUImageIOSDemo.xcworkspace/: contents.xcworkspacedata
demo/macosx/AppGPUImageMacOSX.xcworkspace/: contents.xcworkspacedata
demo/macosx/AppGPUImageMacOSXDemo/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
demo/macosx/AppGPUImageMacOSXDemo.xcodeproj/: project.pbxproj
demo/macosx/AppGPUImageMacOSXDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/macosx/AppGPUImageMacOSXDemo/Base.lproj/: Main.storyboard
demo/win10/AppGPUImageWin10Demo/: AppGPUImageWin10Demo.cpp  AppGPUImageWin10Demo.rc  AppGPUImageWin10Demo.sln  AppGPUImageWin10Demo.vcxproj  AppGPUImageWin10Demo.vcxproj.filters  Resource.h  stdafx.cpp  testsrc.mpg
src/android/: settings.gradle
src/android/app/: build.gradle
src/android/app/src/main/: AndroidManifest.xml
src/android/appgpuimage/: CMakeLists.txt  build.gradle
src/android/appgpuimage/src/androidTest/java/com/dhcdht/appgpuimage/: ExampleInstrumentedTest.java
src/android/appgpuimage/src/main/: AndroidManifest.xml
src/android/appgpuimage/src/main/res/values/: strings.xml
src/android/appgpuimage/src/test/java/com/dhcdht/appgpuimage/: ExampleUnitTest.java
src/android/gradle/wrapper/: gradle-wrapper.properties
src/common/: SDKTest.cpp  SDKTest.h
src/common/IO/: AGIImage.cpp  AGIImage.h  AGIImageConnection.cpp  AGIImageConnection.h  AGIPiplineIOImage.cpp  AGIPiplineIOImage.h
src/common/IO/input/: AGIPiplineInput.cpp  AGIPiplineInput.h  AGIPiplineInputFFmpegReader.cpp  AGIPiplineInputFFmpegReader.h  AGIPiplineInputPicture.cpp  AGIPiplineInputPicture.h
src/common/IO/output/: AGIPiplineOutput.cpp  AGIPiplineOutput.h  AGIPiplineOutputContextWindow.cpp  AGIPiplineOutputContextWindow.h  AGIPiplineOutputImage.cpp  AGIPiplineOutputImage.h
src/common/core/: AGIContext.cpp  AGIContext.h  AGIDisaptchQueue.cpp  AGIDispatchQueue.h  AGIResourceManager.cpp  AGIResourceManager.h
src/common/filter/: AGIFilter.cpp  AGIFilter.h  AGIFilterAlphaBlend.cpp  AGIFilterAlphaBlend.h  AGIFilterContentMode.cpp  AGIFilterContentMode.h  AGIFilterDefault.cpp  AGIFilterDefault.h  AGIFilterGrayscale.cpp  AGIFilterGrayscale.h  AGIFilterOpenCVBackgroundDetect.cpp  AGIFilterOpenCVBackgroundDetect.h  AGIFilterOpenCVFaceDetect.cpp  AGIFilterOpenCVFaceDetect.h  AGIFilterSobelEdgeDetection.cpp  AGIFilterSobelEdgeDetection.h  AGIFilterTransform.cpp  AGIFilterTransform.h  AGIFilterTwoPass.cpp  AGIFilterTwoPass.h
src/common/filter/core/: AGICurve.cpp  AGICurve.h  AGIEasing.cpp  AGIFilter.cpp  AGIFilter.h  AGIFilterDynamicGraph.cpp  AGIFilterDynamicGraph.h  AGIFilterGraph.cpp  AGIFilterGraph.h  AGIFilterRangedGraph.cpp  AGIFilterRangedGraph.h  AGIFilterSetting.cpp  AGIFilterSetting.hpp  AGIFilterSettingInterface.cpp  AGIFilterSettingInterface.h  AGIProgram.cpp  AGIProgram.h  AGIProgramCacheManager.cpp  AGIProgramCacheManager.h
src/common/pipline/: AGIPipline.cpp  AGIPipline.hpp  AGIPiplineConnection.cpp  AGIPiplineConnection.hpp  AGIPiplineGraph.cpp  AGIPiplineGraph.hpp
src/common/piplineIO/: AGIPiplineIO.cpp  AGIPiplineIO.hpp
src/common/player/: AGIPlayable.cpp  AGIPlayable.h  AGIPlayableInterface.cpp  AGIPlayableInterface.h  AGIPlayerEngine.cpp  AGIPlayerEngine.h
src/common/timeline/: AGIClip.cpp  AGIClip.h  AGITimeline.cpp  AGITimeline.h  AGITrack.cpp  AGITrack.h
src/common/util/: AGIUtil.h  AGIUtilDefer.cpp  AGIUtilDefer.h  bgfxUtils.cpp  bgfxUtils.h
src/common_deps/ffmpeg/macosx/dylib/: libavcodec.58.dylib  libavdevice.58.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavutil.56.dylib  libpostproc.55.dylib  libswresample.3.dylib  libswscale.5.dylib
src/common_deps/ffmpeg/win10/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/common_deps/opencv/ios/opencv2.framework/: opencv2
src/common_deps/opencv/macosx/lib/: libopencv_aruco.3.4.2.dylib  libopencv_bgsegm.3.4.2.dylib  libopencv_bioinspired.3.4.2.dylib  libopencv_calib3d.3.4.2.dylib  libopencv_ccalib.3.4.2.dylib  libopencv_core.3.4.2.dylib  libopencv_datasets.3.4.2.dylib  libopencv_dnn.3.4.2.dylib  libopencv_dnn_objdetect.3.4.2.dylib  libopencv_dpm.3.4.2.dylib  libopencv_face.3.4.2.dylib  libopencv_features2d.3.4.2.dylib  libopencv_flann.3.4.2.dylib  libopencv_fuzzy.3.4.2.dylib  libopencv_hfs.3.4.2.dylib  libopencv_highgui.3.4.2.dylib  libopencv_img_hash.3.4.2.dylib  libopencv_imgcodecs.3.4.2.dylib  libopencv_imgproc.3.4.2.dylib  libopencv_line_descriptor.3.4.2.dylib  libopencv_ml.3.4.2.dylib  libopencv_objdetect.3.4.2.dylib  libopencv_optflow.3.4.2.dylib  libopencv_phase_unwrapping.3.4.2.dylib  libopencv_photo.3.4.2.dylib  libopencv_plot.3.4.2.dylib  libopencv_reg.3.4.2.dylib  libopencv_rgbd.3.4.2.dylib  libopencv_saliency.3.4.2.dylib  libopencv_shape.3.4.2.dylib  libopencv_stereo.3.4.2.dylib  libopencv_stitching.3.4.2.dylib  libopencv_structured_light.3.4.2.dylib  (+10 more)
src/common_res/shaders/: alphaBlend_fs.sc  bgfx_shader.sh  default_fs.sc  default_vs.sc  grayscale_fs.sc  grayscale_vs.sc  sobelEdgeDetection_fs.sc  transform_fs.sc  transform_vs.sc  varying.def.sc
src/ios/AppGPUImage/: AGIPlatformIOS.h  AGIPlatformIOS.mm  AppGPUImage.h  AppGPUImageIOS.h
src/ios/AppGPUImage.xcodeproj/: project.pbxproj
src/ios/AppGPUImage.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/macosx/AppGPUImage/: AGIPlatformMacOSX.h  AGIPlatformMacOSX.mm  AppGPUImage.h  AppGPUImageMacOSX.h  Info.plist
src/macosx/AppGPUImage.xcodeproj/: project.pbxproj
src/macosx/AppGPUImage.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/win10/: AGIPlatformWin10.cpp  AGIPlatformWin10.h  AppGPUImage.sln  AppGPUImage.vcxproj  AppGPUImage.vcxproj.filters
(+5 files in other folders)
